--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -79,8 +79,56 @@
         <item>Fit XY</item>
     </string-array>
     <string-array name="crop_values" translatable="false">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+</string-array>
+    <string-array name="battery_bar_entries">
+        <item>Ocultar</item>
+        <item>Mostrar</item>
+    </string-array>
+    <string-array name="battery_bar_values">
         <item>0</item>
         <item>1</item>
+    </string-array>
+    <string-array name="battery_bar_style_entries">
+        <item>Regular</item>
+        <item>Centro reflejado</item>
+    </string-array>
+    <string-array name="battery_bar_style_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="battery_bar_thickness_entries">
+        <item>1 dp</item>
+        <item>2 dp</item>
+        <item>3 dp</item>
+        <item>4 dp</item>
+    </string-array>
+    <string-array name="battery_bar_thickness_values">
+        <item>1</item>
         <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+    <string-array name="tw_effect_entries">
+        <item>Ninguno</item>
+        <item>Cascada</item>
+        <item>Cubo exterior</item>
+        <item>Cubo Interior</item>
+        <item>Carrusel</item>
+        <item>efecto Plano</item>
+        <item>Efecto Transportador</item>
+        <item>Cartas</item>
+    </string-array>
+    <string-array name="tw_effect_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
     </string-array>
 </resources>
